--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html<% if (includeModernizr) { %> class="no-js"<% } %> lang="">
+<html<% if (includeModernizr) { %> class="no-js"<% } %> <% if (includeCache) { %>manifest="cache.manifest" <% } %>>
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
     <title><%= appname %></title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -65,7 +65,7 @@
     </div>
     <% } else { %>
     <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
+      <h1>我是一个小应用</h1>
       <p>You now have</p>
       <ul>
         <li>HTML5 Boilerplate</li><% if (includeSass) { %>
@@ -74,16 +74,7 @@
       </ul>
     </div>
     <% } %>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-
+  
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <!-- endbower -->
